# frontenddevelopmentphase1.1

./: README.md
backend/: .env  .env.example  openapi_temp.json  pyproject.toml  seed_users.py
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: __init__.py  dbo.py  design.py  management.py
backend/app/routers/: chains.py  elements.py  identity.py  load_tables.py  projects.py  rundown.py  tributary.py  users.py
backend/app/schemas/: chain.py  elements.py  identity.py  load_table.py  project.py  rundown.py  tributary.py  users.py
backend/app/services/: beam_weight.py  chain_service.py  coordinate_parser.py  element_identity.py  level_identity.py  mark_parser.py  project_service.py  voronoi.py  (+3 more)
backend/tests/: conftest.py  test_chains.py  test_connection.py  test_coordinate_parser.py  test_element_identity.py  test_elements.py  test_identity_tables.py  test_level_identity.py  test_load_tables.py  test_mark_parser.py  test_projects.py  test_rundown_api.py  test_rundown_workflow.py  test_tributary.py
rundown_engine/: __init__.py  compute.py  formulas.py  pyproject.toml  recompute.py  validate.py
rundown_engine/dtypes/: __init__.py  cad.py  constants.py  export.py  inputs.py  outputs.py  spreadsheet.py  validation.py
rundown_engine/parsers/: __init__.py  cad_dxf.py  spreadsheet.py
rundown_engine/tests/: conftest.py  data_20205.py  data_24043.py  test_cad_dxf_parser.py  test_compute.py  test_formulas.py  test_recompute.py  test_spreadsheet_parser.py  test_validate.py  test_verification.py
rundown_engine/writers/: __init__.py  spreadsheet.py
(+40 files in other folders)
