[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rundown-engine"
version = "0.1.0"
description = "Standalone cumulative gravity load (rundown) computation engine"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1",
    "ezdxf>=0.18",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools]
package-dir = {"" = ".."}

[tool.setuptools.packages.find]
where = [".."]
include = ["rundown_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]